tried to fix gap issue with about section grid when in mobile view

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -28,7 +28,6 @@
     width: 90vw;
     gap: 1rem;
     /* border: 1px solid red; */
-    /* border: 2px solid red; */
 }
 
 .headshot {
@@ -93,6 +92,7 @@
     background-color: var(--sand-color);
 }
 
+/* tablet view */
 @media only screen and (max-width: 935px) {
     .about-ctr-main {
         height: auto;
@@ -104,14 +104,13 @@
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         margin-bottom: 50px;
-
     }
     .headshot {
         grid-column: 1 / span 2;
         grid-row: 1/ span 1;
     }
     .headshot img {
-        width: 28vw;
+        width: 35vw;
         height: auto;
     }
     .education {
@@ -128,6 +127,7 @@
     }
 }
 
+/* mobile view */
 @media only screen and (max-width: 615px) {
     .about-ctr-main {
         height: auto;
